--- a/css/style.css
+++ b/css/style.css
@@ -287,6 +287,8 @@ h6 {
   font-size: 14px;
   text-transform: uppercase;
   letter-spacing: 0.35px;
+  border-bottom: 1px solid #e8e8e8;
+  padding-bottom: 10px;
 }
 
 .open-menu .category-items_title ::after {
@@ -361,10 +363,6 @@ h6 {
           justify-content: center;
 }
 
-.nav .nav-string .links {
-  margin-right: 45px;
-}
-
 .nav .nav-string .links .link {
   color: #222222;
   font-family: "Lato", sans-serif;
@@ -372,7 +370,7 @@ h6 {
   font-weight: 700;
   text-transform: uppercase;
   text-decoration: none;
-  padding-bottom: 18px;
+  padding: 0px 23px 18px;
 }
 
 .nav .nav-string .links:last-child {
@@ -756,7 +754,7 @@ h6 {
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
   top: 5px;
-  left: 100px;
+  left: 125px;
 }
 
 .women-mm {
@@ -776,7 +774,7 @@ h6 {
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
   top: 5px;
-  left: 115px;
+  left: 135px;
 }
 
 .kids-mm {
@@ -796,7 +794,7 @@ h6 {
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
   top: 5px;
-  left: 220px;
+  left: 245px;
 }
 
 .accoseriese-mm {
@@ -816,7 +814,7 @@ h6 {
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
   top: 5px;
-  left: 385px;
+  left: 360px;
 }
 
 .featured-mm {
@@ -836,7 +834,7 @@ h6 {
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
   top: 5px;
-  left: 510px;
+  left: 490px;
 }
 
 .deals-mm {
@@ -856,7 +854,7 @@ h6 {
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
   top: 5px;
-  left: 630px;
+  left: 610px;
 }
 
 /* media */
