--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -14,7 +14,7 @@
       line-height: normal;
       padding-bottom: 27px;
    }
-   a {
+   &-nav {
       display: block;
       color: #898989;
       font-family: $lato;
